--- a/abdelboutar-web/src/app/pages/login/login.component.html
+++ b/abdelboutar-web/src/app/pages/login/login.component.html
@@ -8,7 +8,7 @@
         <h2 class="mb-0">Sign in</h2>
         <small>Sign in with social media</small>
         <div class="social-media-login mt-2 mt-lg-3">
-          <a href="#" class="btn btn-facebook btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-facebook-square"></i> LOGIN WITH FACEBOOK</a>
+          <a href="#" class="btn btn-facebook btn-block mb-2 mb-lg-3 text-white" (click)="loginFB()"> <i class="fab fa-facebook-square"></i> LOGIN WITH FACEBOOK</a>
           <a href="#" class="btn btn-google btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-google"></i> LOGIN WITH GOOGLE &nbsp;&nbsp;</a>
           <a href="#" class="btn btn-twitter btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-twitter"></i> LOGIN WITH TWITTER &nbsp;&nbsp;&nbsp;&nbsp;</a>
           <a href="#" class="btn btn-twitch btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-twitch"></i> LOGIN WITH TWITCH &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
