--- a/abdelboutar-web/src/app/pages/console/console.component.html
+++ b/abdelboutar-web/src/app/pages/console/console.component.html
@@ -26,10 +26,11 @@
   <div class="container">
     <div class="row">
       <div class="col-7 col-sm-6 col-md-6 col-lg-9">
-        <form action="console.html" method="post">
+        <form [formGroup]="searchForm">
           <div class="form-group has-search">
             <span class="fa fa-search form-control-feedback"></span>
-            <input type="text" class="form-control" placeholder="Logitexh pro">
+            <input (keyup)="searchProducts()" class="form-control" formControlName="name" placeholder="Logitexh pro"
+                   type="text">
           </div>
         </form>
       </div>
@@ -53,7 +54,8 @@
     <div class="row">
       <div class="col-lg-3 col-md-5 filters">
         <div class="sticky-top mb-5">
-          <h6 class="bolder mb-4 filter-heading">FILTROS <i class="fa fa-angle-double-down float-right d-md-none"></i></h6>
+          <h6 class="bolder mb-4 filter-heading">FILTROS <i class="fa fa-angle-double-down float-right d-md-none"></i>
+          </h6>
           <div class="filter-box">
             <select class="form-control my-select mb-4">
               <option value="">Categoría</option>
@@ -92,7 +94,7 @@
 
             <div class="mb-5">
               <h6>Rango de precio</h6>
-              <input type="text" id="range" name="range" value="" />
+              <input id="range" name="range" type="text" value=""/>
             </div>
           </div>
         </div>
@@ -101,14 +103,16 @@
         <div class="row">
 
           <!-- Product -->
-          <div class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
+          <div *ngFor="let product of products" class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
             <div class="card mb-3 box-shadow border-radius pt-2">
               <div class="col-md-12 text-center position-relative mb-3">
                 <div class="position-absolute w-100 pr-4">
-                  <a href="#" class="badge badge-pill icon-purple float-right"><img src="assets/img/icons/icon2.png"></a>
+                  <a class="badge badge-pill icon-purple float-right" href="#"><img
+                    src="assets/img/icons/icon2.png"></a>
                 </div>
                 <div class="mt-3">
-                  <a href="result.html"><img class="pro-image img-fluid" src="assets/img/products/product-3.png" alt="Logitech G Pro" title="Logitech G Pro"></a>
+                  <a href="result.html"><img alt="Logitech G Pro" class="pro-image img-fluid"
+                                             src="assets/img/products/product-3.png" title="Logitech G Pro"></a>
                 </div>
               </div>
               <div class="position-relative">
@@ -121,24 +125,22 @@
               <div class="pro-detail col-md-12">
                 <div class="row">
                   <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">Logitech G Pro</h6>
-                      <p class="font-11">ach component of the Arctis Pro + GameDAC Hi-Res gaming audio</p>
+                    <h6 class="bolder mb-1">{{product?.name}}</h6>
+                    <p class="font-11">{{product?.description}}</p>
                   </div>
                   <div class="col-3 text-right pt-2">
                     <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">590€</h6>
+                    <h6 class="bolder">{{product?.price}}€</h6>
                   </div>
                   <div class="col-6 pt-1">
                     <p class="font-14">
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="far fa-star text-warning"></i>
+                      <i *ngFor="let rate of rating(product.rating)" class="fa fa-star text-warning"></i>
+                      <i *ngFor="let rate of rating(5-product.rating)" class="far fa-star text-warning"></i>
                     </p>
                   </div>
                   <div class="col-6 pr-2 text-right">
-                    <a href="result.html" class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm">Comparar</a>
+                    <a class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm"
+                       href="result.html">Comparar</a>
                   </div>
                 </div>
               </div>
@@ -146,227 +148,6 @@
           </div>
           <!--/Product  -->
 
-          <!-- Product -->
-          <div class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
-            <div class="card mb-3 box-shadow border-radius pt-2">
-              <div class="col-md-12 text-center position-relative mb-3">
-                <div class="position-absolute w-100 pr-4">
-                  <a href="#" class="badge badge-pill icon-purple float-right"><img src="assets/img/icons/icon2.png"></a>
-                </div>
-                <div class="mt-3">
-                  <a href="result.html"><img class="pro-image img-fluid" src="assets/img/products/product-3.png" alt="Logitech G Pro" title="Logitech G Pro"></a>
-                </div>
-              </div>
-              <div class="position-relative">
-                <!-- <b class="badge badge-red my-badge position-absolute un-favourite" title="Make Favourite"><i class="fa fa-heart"></i></b> -->
-                <span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite">
-			          			<i class="far fa-heart"></i></span>
-                <hr class="bg-dark">
-              </div>
-              <div class="pro-detail col-md-12">
-                <div class="row">
-                  <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">Logitech G Pro</h6>
-                      <p class="font-11">ach component of the Arctis Pro + GameDAC Hi-Res gaming audio</p>
-                  </div>
-                  <div class="col-3 text-right pt-2">
-                    <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">590€</h6>
-                  </div>
-                  <div class="col-6 pt-1">
-                    <p class="font-14">
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="far fa-star text-warning"></i>
-                    </p>
-                  </div>
-                  <div class="col-6 pr-2 text-right">
-                    <a href="result.html" class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm">Comparar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--/Product  -->
-
-          <!-- Product -->
-          <div class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
-            <div class="card mb-3 box-shadow border-radius pt-2">
-              <div class="col-md-12 text-center position-relative mb-3">
-                <div class="position-absolute w-100 pr-4">
-                  <a href="#" class="badge badge-pill icon-purple float-right"><img src="assets/img/icons/icon2.png"></a>
-                </div>
-                <div class="mt-3">
-                  <a href="result.html"><img class="pro-image img-fluid" src="assets/img/products/product-3.png" alt="Logitech G Pro" title="Logitech G Pro"></a>
-                </div>
-              </div>
-              <div class="position-relative">
-                <!-- <b class="badge badge-red my-badge position-absolute un-favourite" title="Make Favourite"><i class="fa fa-heart"></i></b> -->
-                <span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite">
-			          			<i class="far fa-heart"></i></span>
-                <hr class="bg-dark">
-              </div>
-              <div class="pro-detail col-md-12">
-                <div class="row">
-                  <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">Logitech G Pro</h6>
-                      <p class="font-11">ach component of the Arctis Pro + GameDAC Hi-Res gaming audio</p>
-                  </div>
-                  <div class="col-3 text-right pt-2">
-                    <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">590€</h6>
-                  </div>
-                  <div class="col-6 pt-1">
-                    <p class="font-14">
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="far fa-star text-warning"></i>
-                    </p>
-                  </div>
-                  <div class="col-6 pr-2 text-right">
-                    <a href="result.html" class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm">Comparar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--/Product  -->
-
-          <!-- Product -->
-          <div class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
-            <div class="card mb-3 box-shadow border-radius pt-2">
-              <div class="col-md-12 text-center position-relative mb-3">
-                <div class="position-absolute w-100 pr-4">
-                  <a href="#" class="badge badge-pill icon-purple float-right"><img src="assets/img/icons/icon2.png"></a>
-                </div>
-                <div class="mt-3">
-                  <a href="result.html"><img class="pro-image img-fluid" src="assets/img/products/product-3.png" alt="Logitech G Pro" title="Logitech G Pro"></a>
-                </div>
-              </div>
-              <div class="position-relative">
-                <b class="badge badge-red my-badge position-absolute un-favourite" title="Un Favourite"><i class="fa fa-heart"></i></b>
-                <!-- 			          		<span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite"><i class="fa fa-heart-o"></i></span> -->
-                <hr class="bg-dark">
-              </div>
-              <div class="pro-detail col-md-12">
-                <div class="row">
-                  <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">Logitech G Pro</h6>
-                      <p class="font-11">ach component of the Arctis Pro + GameDAC Hi-Res gaming audio</p>
-                  </div>
-                  <div class="col-3 text-right pt-2">
-                    <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">590€</h6>
-                  </div>
-                  <div class="col-6 pt-1">
-                    <p class="font-14">
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="far fa-star text-warning"></i>
-                    </p>
-                  </div>
-                  <div class="col-6 pr-2 text-right">
-                    <a href="result.html" class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm">Comparar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--/Product  -->
-
-          <!-- Product -->
-          <div class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
-            <div class="card mb-3 box-shadow border-radius pt-2">
-              <div class="col-md-12 text-center position-relative mb-3">
-                <div class="position-absolute w-100 pr-4">
-                  <a href="#" class="badge badge-pill icon-purple float-right"><img src="assets/img/icons/icon2.png"></a>
-                </div>
-                <div class="mt-3">
-                  <a href="result.html"><img class="pro-image img-fluid" src="assets/img/products/product-3.png" alt="Logitech G Pro" title="Logitech G Pro"></a>
-                </div>
-              </div>
-              <div class="position-relative">
-                <b class="badge badge-red my-badge position-absolute un-favourite" title="Un Favourite"><i class="fa fa-heart"></i></b>
-                <!-- 			          		<span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite"><i class="fa fa-heart-o"></i></span> -->
-                <hr class="bg-dark">
-              </div>
-              <div class="pro-detail col-md-12">
-                <div class="row">
-                  <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">Logitech G Pro</h6>
-                      <p class="font-11">ach component of the Arctis Pro + GameDAC Hi-Res gaming audio</p>
-                  </div>
-                  <div class="col-3 text-right pt-2">
-                    <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">590€</h6>
-                  </div>
-                  <div class="col-6 pt-1">
-                    <p class="font-14">
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="far fa-star text-warning"></i>
-                    </p>
-                  </div>
-                  <div class="col-6 pr-2 text-right">
-                    <a href="result.html" class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm">Comparar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--/Product  -->
-
-          <!-- Product -->
-          <div class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
-            <div class="card mb-3 box-shadow border-radius pt-2">
-              <div class="col-md-12 text-center position-relative mb-3">
-                <div class="position-absolute w-100 pr-4">
-                  <a href="#" class="badge badge-pill icon-purple float-right"><img src="assets/img/icons/icon2.png"></a>
-                </div>
-                <div class="mt-3">
-                  <a href="result.html"><img class="pro-image img-fluid" src="assets/img/products/product-3.png" alt="Logitech G Pro" title="Logitech G Pro"></a>
-                </div>
-              </div>
-              <div class="position-relative">
-                <b class="badge badge-red my-badge position-absolute un-favourite" title="Un Favourite"><i class="fa fa-heart"></i></b>
-                <!-- 			          		<span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite"><i class="fa fa-heart-o"></i></span> -->
-                <hr class="bg-dark">
-              </div>
-              <div class="pro-detail col-md-12">
-                <div class="row">
-                  <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">Logitech G Pro</h6>
-                      <p class="font-11">ach component of the Arctis Pro + GameDAC Hi-Res gaming audio</p>
-                  </div>
-                  <div class="col-3 text-right pt-2">
-                    <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">590€</h6>
-                  </div>
-                  <div class="col-6 pt-1">
-                    <p class="font-14">
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="fa fa-star text-warning"></i>
-                      <i class="far fa-star text-warning"></i>
-                    </p>
-                  </div>
-                  <div class="col-6 pr-2 text-right">
-                    <a href="result.html" class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm">Comparar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--/Product  -->
         </div>
         <!-- End Row -->
 
@@ -381,15 +162,6 @@
                 </a>
               </li> -->
               <li class="page-item active"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">4</a></li>
-              <li class="page-item"><a class="page-link" href="#">5</a></li>
-              <li class="page-item"><a class="page-link" href="#">6</a></li>
-              <li class="page-item"><a class="page-link" href="#">7</a></li>
-              <li class="page-item"><a class="page-link" href="#">8</a></li>
-              <li class="page-item"><a class="page-link" href="#">9</a></li>
-              <li class="page-item"><a class="page-link" href="#">10</a></li>
               <li class="page-item">
                 <a class="page-link" href="#">
                   <span aria-hidden="true">&raquo;</span>
