--- a/abdelboutar-web/src/app/pages/console/console.component.html
+++ b/abdelboutar-web/src/app/pages/console/console.component.html
@@ -111,8 +111,10 @@
                     src="assets/img/icons/icon2.png"></a>
                 </div>
                 <div class="mt-3">
+                  <!--src="assets/img/products/product-3.png"-->
                   <a href="result.html"><img alt="Logitech G Pro" class="pro-image img-fluid"
-                                             src="assets/img/products/product-3.png" title="Logitech G Pro"></a>
+                                             [src]="product.image"
+                                             title="Logitech G Pro"></a>
                 </div>
               </div>
               <div class="position-relative">
