--- a/abdelboutar-web/src/app/pages/console/console.component.html
+++ b/abdelboutar-web/src/app/pages/console/console.component.html
@@ -22,159 +22,157 @@
 
 
 <!-- SearchBar -->
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-7 col-sm-6 col-md-6 col-lg-9">
-        <form [formGroup]="searchForm">
+<form [formGroup]="searchForm">
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-7 col-sm-6 col-md-6 col-lg-9">
           <div class="form-group has-search">
             <span class="fa fa-search form-control-feedback"></span>
             <input (keyup)="searchProducts()" class="form-control" formControlName="name" placeholder="Logitexh pro"
                    type="text">
           </div>
-        </form>
-      </div>
-      <div class="col-5 col-sm-6 col-md-6 col-lg-3">
-        <select class="form-control my-select">
-          <option value="">Ordenar por</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-        </select>
+        </div>
+        <div class="col-5 col-sm-6 col-md-6 col-lg-3">
+          <select class="form-control my-select">
+            <option value="">Ordenar por</option>
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+          </select>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<!-- /SearchBar -->
+  </section>
+  <!-- /SearchBar -->
 
 
-<!-- ======= Product Section ======= -->
-<section class="console-products section-bg">
-  <div class="container mt-2 mt-lg-5">
-    <div class="row">
-      <div class="col-lg-3 col-md-5 filters">
-        <div class="sticky-top mb-5">
-          <h6 class="bolder mb-4 filter-heading">FILTROS <i class="fa fa-angle-double-down float-right d-md-none"></i>
-          </h6>
-          <div class="filter-box">
-            <select class="form-control my-select mb-4">
-              <option value="">Categoría</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
+  <!-- ======= Product Section ======= -->
+  <section class="console-products section-bg">
+    <div class="container mt-2 mt-lg-5">
+      <div class="row">
+        <div class="col-lg-3 col-md-5 filters">
+          <div class="sticky-top mb-5">
+            <h6 class="bolder mb-4 filter-heading">FILTROS <i class="fa fa-angle-double-down float-right d-md-none"></i>
+            </h6>
+            <div class="filter-box">
+              <select (change)="setSubCategory()" class="form-control my-select mb-4" formControlName="category">
+                <option value="">Categoría</option>
+                <option *ngFor="let cat of categories" [value]="cat.id">{{cat?.category}}</option>
+              </select>
 
-            <select class="form-control my-select mb-4">
-              <option value="">Subcategorías</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
+              <select (change)="searchProducts()" class="form-control my-select mb-4" formControlName="subCategory">
+                <option value="">Subcategorías</option>
+                <option *ngFor="let subCat of subCategories" [value]="subCat.id">{{subCat?.subCategory}}</option>
+              </select>
 
-            <select class="form-control my-select mb-4">
-              <option value="">Tienda</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
+              <!--<select class="form-control my-select mb-4">
+                <option value="">Tienda</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>
 
-            <select class="form-control my-select mb-4">
-              <option value="">Gastos de envío</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
+              <select class="form-control my-select mb-4">
+                <option value="">Gastos de envío</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>
 
-            <select class="form-control my-select mb-4 mb-sm-4">
-              <option value="">Métodos de pago</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
+              <select class="form-control my-select mb-4 mb-sm-4">
+                <option value="">Métodos de pago</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>-->
 
-            <div class="mb-5">
-              <h6>Rango de precio</h6>
-              <input id="range" name="range" type="text" value=""/>
+              <div class="mb-5">
+                <h6>Rango de precio</h6>
+                <input id="range" name="range" type="text" value=""/>
+                <input formControlName="priceFrom" name="priceFrom" type="hidden"/>
+                <input formControlName="priceTo" name="priceTo" type="hidden"/>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-7 col-lg-9">
-        <div class="row">
+        <div class="col-md-7 col-lg-9">
+          <div class="row">
 
-          <!-- Product -->
-          <div *ngFor="let product of products" class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
-            <div class="card mb-3 box-shadow border-radius pt-2">
-              <div class="col-md-12 text-center position-relative mb-3">
-                <div class="position-absolute w-100 pr-4">
-                  <a class="badge badge-pill icon-purple float-right" href="#"><img
-                    src="assets/img/icons/icon2.png"></a>
+            <!-- Product -->
+            <div *ngFor="let product of products" class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
+              <div class="card mb-3 box-shadow border-radius pt-2">
+                <div class="col-md-12 text-center position-relative mb-3">
+                  <div class="position-absolute w-100 pr-4">
+                    <a class="badge badge-pill icon-purple float-right" href="#"><img
+                      src="assets/img/icons/icon2.png"></a>
+                  </div>
+                  <div class="mt-3">
+                    <!--src="assets/img/products/product-3.png"-->
+                    <a href="result.html"><img [src]="product.image" alt="Logitech G Pro"
+                                               class="pro-image img-fluid"
+                                               title="Logitech G Pro"></a>
+                  </div>
                 </div>
-                <div class="mt-3">
-                  <!--src="assets/img/products/product-3.png"-->
-                  <a href="result.html"><img alt="Logitech G Pro" class="pro-image img-fluid"
-                                             [src]="product.image"
-                                             title="Logitech G Pro"></a>
-                </div>
-              </div>
-              <div class="position-relative">
-                <!-- <b class="badge badge-red my-badge position-absolute un-favourite" title="Make Favourite"><i class="fa fa-heart"></i></b> -->
-                <span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite">
+                <div class="position-relative">
+                  <!-- <b class="badge badge-red my-badge position-absolute un-favourite" title="Make Favourite"><i class="fa fa-heart"></i></b> -->
+                  <span class="badge badge-black my-badge position-absolute favourite" title="Make Favourite">
 			          			<i class="far fa-heart"></i>
 			          		</span>
-                <hr class="bg-dark">
-              </div>
-              <div class="pro-detail col-md-12">
-                <div class="row">
-                  <div class="col-9 pr-0">
-                    <h6 class="bolder mb-1">{{product?.name}}</h6>
-                    <p class="font-11">{{product?.description}}</p>
-                  </div>
-                  <div class="col-3 text-right pt-2">
-                    <small class="mb-0 font-10">Desde:</small>
-                    <h6 class="bolder">{{product?.price}}€</h6>
-                  </div>
-                  <div class="col-6 pt-1">
-                    <p class="font-14">
-                      <i *ngFor="let rate of rating(product.rating)" class="fa fa-star text-warning"></i>
-                      <i *ngFor="let rate of rating(5-product.rating)" class="far fa-star text-warning"></i>
-                    </p>
-                  </div>
-                  <div class="col-6 pr-2 text-right">
-                    <a class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm"
-                       href="result.html">Comparar</a>
+                  <hr class="bg-dark">
+                </div>
+                <div class="pro-detail col-md-12">
+                  <div class="row">
+                    <div class="col-9 pr-0">
+                      <h6 class="bolder mb-1">{{product?.name}}</h6>
+                      <p class="font-11">{{product?.description}}</p>
+                    </div>
+                    <div class="col-3 text-right pt-2">
+                      <small class="mb-0 font-10">Desde:</small>
+                      <h6 class="bolder">{{product?.price}}€</h6>
+                    </div>
+                    <div class="col-6 pt-1">
+                      <p class="font-14">
+                        <i *ngFor="let rate of rating(product.rating)" class="fa fa-star text-warning"></i>
+                        <i *ngFor="let rate of rating(5-product.rating)" class="far fa-star text-warning"></i>
+                      </p>
+                    </div>
+                    <div class="col-6 pr-2 text-right">
+                      <a class="btn btn-warning font-10 text-white pl-2 pr-2 pt-1 pb-1 btn-radius btn-sm"
+                         href="result.html">Comparar</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+            <!--/Product  -->
+
           </div>
-          <!--/Product  -->
+          <!-- End Row -->
+
+          <div class="col-md-12 mb-5">
+            <!-- Pagination -->
+            <nav aria-label="Page navigation example">
+              <ul class="pagination justify-content-center">
+                <!-- <li class="page-item disabled">
+                  <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                    <i class="fa fa-arrow-left"></i>
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li> -->
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <!-- /Pagination -->
+          </div>
 
         </div>
-        <!-- End Row -->
-
-        <div class="col-md-12 mb-5">
-          <!-- Pagination -->
-          <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-              <!-- <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-                  <i class="fa fa-arrow-left"></i>
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li> -->
-              <li class="page-item active"><a class="page-link" href="#">1</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <!-- /Pagination -->
-        </div>
-
       </div>
     </div>
-  </div>
-</section><!-- End Products Section -->
+  </section><!-- End Products Section -->
+</form>
