--- a/abdelboutar-web/src/app/pages/login/login.component.html
+++ b/abdelboutar-web/src/app/pages/login/login.component.html
@@ -8,11 +8,16 @@
         <h2 class="mb-0">Sign in</h2>
         <small>Sign in with social media</small>
         <div class="social-media-login mt-2 mt-lg-3">
-          <a href="#" class="btn btn-facebook btn-block mb-2 mb-lg-3 text-white" (click)="loginFB()"> <i class="fab fa-facebook-square"></i> LOGIN WITH FACEBOOK</a>
-          <a href="#" class="btn btn-google btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-google"></i> LOGIN WITH GOOGLE &nbsp;&nbsp;</a>
-          <a href="#" class="btn btn-twitter btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-twitter"></i> LOGIN WITH TWITTER &nbsp;&nbsp;&nbsp;&nbsp;</a>
-          <a href="#" class="btn btn-twitch btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-twitch"></i> LOGIN WITH TWITCH &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-          <a href="#" class="btn btn-discord btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-discord"></i> LOGIN WITH DISCORD &nbsp;&nbsp;</a>
+          <a (click)="signInWithFB()" class="btn btn-facebook btn-block mb-2 mb-lg-3 text-white" href="#"> <i
+            class="fab fa-facebook-square"></i> LOGIN WITH FACEBOOK</a>
+          <a (click)="signInWithGoogle()" class="btn btn-google btn-block mb-2 mb-lg-3 text-white" href="#"> <i
+            class="fab fa-google"></i> LOGIN WITH GOOGLE &nbsp;&nbsp;</a>
+          <a href="#" class="btn btn-twitter btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-twitter"></i> LOGIN
+            WITH TWITTER &nbsp;&nbsp;&nbsp;&nbsp;</a>
+          <a href="#" class="btn btn-twitch btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-twitch"></i> LOGIN WITH
+            TWITCH &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+          <a href="#" class="btn btn-discord btn-block mb-2 mb-lg-3 text-white"> <i class="fab fa-discord"></i> LOGIN
+            WITH DISCORD &nbsp;&nbsp;</a>
         </div>
         <div class="text-center">
           <small>or login with email address</small>
