-pagination and login

--- a/abdelboutar-web/src/app/pages/console/console.component.html
+++ b/abdelboutar-web/src/app/pages/console/console.component.html
@@ -100,7 +100,7 @@
           <div class="row">
 
             <!-- Product -->
-            <div *ngFor="let product of products" class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
+            <div *ngFor="let product of products  | paginate: { itemsPerPage: itemsPerPage, currentPage: page }" class="col-12 col-lg-6 col-xl-4 mb-5 pl-lg-2 pr-lg-2">
               <div class="card mb-3 box-shadow border-radius pt-2">
                 <div class="col-md-12 text-center position-relative mb-3">
                   <div class="position-absolute w-100 pr-4">
@@ -152,22 +152,28 @@
 
           <div class="col-md-12 mb-5">
             <!-- Pagination -->
-            <nav aria-label="Page navigation example">
+            <pagination-controls (pageChange)="page = $event"></pagination-controls>
+            <!--<nav aria-label="Page navigation example">
               <ul class="pagination justify-content-center">
-                <!-- <li class="page-item disabled">
+                &lt;!&ndash; <li class="page-item disabled">
                   <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
                     <i class="fa fa-arrow-left"></i>
                     <span aria-hidden="true">&laquo;</span>
                   </a>
-                </li> -->
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                </li> &ndash;&gt;
+                <ng-container *ngFor="let page of totalPagesArr; let i = index">
+                  {{i+1}}
+                </ng-container>
+                <li class="page-item active">
+                  <a class="page-link" href="#">1</a>
+                </li>
                 <li class="page-item">
                   <a class="page-link" href="#">
                     <span aria-hidden="true">&raquo;</span>
                   </a>
                 </li>
               </ul>
-            </nav>
+            </nav>-->
             <!-- /Pagination -->
           </div>
 
